computing to computer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <td><font face="Calibri"><strong><big><big>Anindya Banerjee</big></big></strong>
 <IMG SRC="anindya_banerjee.png" ALT="Anindya Banerjee" align=right WIDTH=128 HEIGHT=192>
    <p>
-I am a computing scientist interested in the science of computer programming.
+I am a computer scientist interested in the science of computer programming.
 </p>
 <p>
 Currently I am Program Director in the <a href=http://www.nsf.gov/div/index.jsp?div=CCF>Division of Computing and Communication Foundations (CCF)</a> of the <a href=http://www.nsf.gov/dir/index.jsp?org=CISE>Directorate for Computer and Information Science and Engineering (CISE)</a>
