--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ The following is a sample of some recent publications. My <a href = http://softw
     In <I>Thirtysixth ACM SIGPLAN International Conference on Programming Language Design and Implementation (PLDI) </I>, June 2015. To appear.<br>
     <a href = http://software.imdea.org/~ab/Publications/pldi-draft.pdf>Draft</a>; Last revised, November 2015.
     <a href = "http://software.imdea.org/~aleks/fcsl/fcsl-pldi15.zip">Coq scripts</a>. 
-    <a href = "http://software.imdea.org/~aleks/fcsl/">Project page</a>
+    <a href = "http://software.imdea.org/fcsl/">Project page</a>
     </li>
     </p>
 
@@ -58,7 +58,7 @@ The following is a sample of some recent publications. My <a href = http://softw
     <b>Specifying and Verifying Concurrent Algorithms with Histories and Subjectivity.</b><br>
     In <I>Twentyfourth European Symposium on Programming (ESOP) </I>, April 2015.<br>
     <a href = "http://software.imdea.org/~ab/Publications/esop15.pdf">PDF</a>;
-    <a href = "http://software.imdea.org/~aleks/fcsl/">Project page</a> containing code and extended version of paper.
+    <a href = "http://software.imdea.org/fcsl/">Project page</a> containing code and extended version of paper.
     </li>
     </p>
 
