--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@ The following is a sample of some recent publications. My <a href = http://softw
     Ilya Sergey, Aleksandar Nanevski and Anindya Banerjee.<br>
     <b>Mechanized Verification of Fine-grained Concurrent Programs.</b><br>
     In <I>Thirtysixth ACM SIGPLAN International Conference on Programming Language Design and Implementation (PLDI) </I>, June 2015. To appear.<br>
-    <a href = http://software.imdea.org/~ab/Publications/pldi-draft.pdf>Draft</a>; Last revised, November 2015.
-    <a href = "http://software.imdea.org/~aleks/fcsl/fcsl-pldi15.zip">Coq scripts</a>. 
-    <a href = "http://software.imdea.org/fcsl/">Project page</a>
+   [<a href = http://software.imdea.org/~ab/Publications/pldi-draft.pdf>Draft</a>; Last revised, November 2015 |
+    <a href = "http://software.imdea.org/~aleks/fcsl/fcsl-pldi15.zip">Coq scripts</a> | 
+    <a href = "http://software.imdea.org/fcsl/">Project page</a>]
     </li>
     </p>
 
@@ -57,8 +57,8 @@ The following is a sample of some recent publications. My <a href = http://softw
     Ilya Sergey, Aleksandar Nanevski and Anindya Banerjee.<br>
     <b>Specifying and Verifying Concurrent Algorithms with Histories and Subjectivity.</b><br>
     In <I>Twentyfourth European Symposium on Programming (ESOP) </I>, April 2015.<br>
-    <a href = "http://software.imdea.org/~ab/Publications/esop15.pdf">PDF</a>;
-    <a href = "http://software.imdea.org/fcsl/">Project page</a> containing code and extended version of paper.
+   [<a href = "http://software.imdea.org/~ab/Publications/esop15.pdf">PDF</a> |
+    <a href = "http://software.imdea.org/fcsl/">Project page</a>]
     </li>
     </p>
 
@@ -75,8 +75,7 @@ The following is a sample of some recent publications. My <a href = http://softw
     Alexander Malkis and Anindya Banerjee. <br>
     <b>On Automation in the Verification of Software Barriers: Experience Report.</b><br>
     <I>Journal of Automated Reasoning (JAR)</I> 52(3), pp. 275--329, March 2014.<br>
-    <a href ="http://software.imdea.org/~ab/Publications/barrier.pdf">PDF</a>;
-    The <a href="http://software.imdea.org/~ab/BarrierVerification/index.htm">experiments</a>.
+    [<a href ="http://software.imdea.org/~ab/Publications/barrier.pdf">PDF</a> | <a  href="http://software.imdea.org/~ab/BarrierVerification/index.htm">Experiments</a>]
     </li>
     </p>
 
