--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ The following is a sample of some recent publications. My <a href = http://softw
     Ilya Sergey, Aleksandar Nanevski and Anindya Banerjee.<br>
     <b>Mechanized Verification of Fine-grained Concurrent Programs.</b><br>
     In <I>Thirtysixth ACM SIGPLAN International Conference on Programming Language Design and Implementation (PLDI) </I>, June 2015. To appear.<br>
-   [<a href = http://software.imdea.org/~ab/Publications/pldi-draft.pdf>Draft</a>; Last revised, November 2015 |
-    <a href = "http://software.imdea.org/~aleks/fcsl/fcsl-pldi15.zip">Coq scripts</a> | 
+   [<a href = http://software.imdea.org/~ab/Publications/pldi15.pdf>PDF</a> |
+    <a href = "http://software.imdea.org/fcsl/artifacts/fcsl-pldi15.zip">Coq scripts</a> | 
     <a href = "http://software.imdea.org/fcsl/">Project page</a>]
     </li>
     </p>
