--- a/index.html
+++ b/index.html
@@ -43,9 +43,19 @@ The following is a sample of some recent publications. My <a href = http://softw
     <ul>
     <p>
     <li>
+    Torben Amtoft and Anindya Banerjee.<br>
+    <b>A Theory of Slicing for Probabilistic Control-Flow Graphs.</b><br>
+    In <I>Nineteenth International Conference on Foundations of Software Science and Computation Structures (FoSSaCS) </I>, April 2016. <br>
+    [<a href =  http://software.imdea.org/~ab/Publications/fossacs16.pdf>PDF</a> |
+     <a href = http://people.cis.ksu.edu/~tamtoft/Papers/Amt+Ban:ProbSlice-2015/long.pdf>Technical Report</a>]
+    </li>
+    </p>
+
+    <p>
+    <li>
     Ilya Sergey, Aleksandar Nanevski and Anindya Banerjee.<br>
     <b>Mechanized Verification of Fine-grained Concurrent Programs.</b><br>
-    In <I>Thirtysixth ACM SIGPLAN International Conference on Programming Language Design and Implementation (PLDI) </I>, June 2015. To appear.<br>
+    In <I>Thirtysixth ACM SIGPLAN International Conference on Programming Language Design and Implementation (PLDI) </I>, June 2015. <br>
    [<a href = http://software.imdea.org/~ab/Publications/pldi15.pdf>PDF</a> |
     <a href = "http://software.imdea.org/fcsl/artifacts/fcsl-pldi15.zip">Coq scripts</a> | 
     <a href = "http://software.imdea.org/fcsl/">Project page</a>]
